--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
     </div>
       <!-- happy clients -->
-      <div class="container my-5 overflow-hidden">
+      <div class="container my-5 py-2 overflow-hidden">
         <h1 class="text-capitalize fw-bold fs-1 text-center">Happy Clients says</h1>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-4 col-12 mt-5 mt-lg-5 col-md-6">
