--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item mx-2">
               <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-2">
               <a class="nav-link active fw-bold" aria-current="page" href="#">About Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-2">
               <a class="nav-link active fw-bold" aria-current="page" href="#">Contact</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-2">
               <a class="nav-link active fw-bold" aria-current="page" href="#">Subscribe</a>
             </li>
           </ul>
